[project]
name = "hello_pypi-cat"
version = "0.0.1"
authors = [
  { name="Cat", email="author@example.com" },
]
description = "A small example package for publishing to pypi"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/CatDN/hello-pypi"
Issues = "https://github.com/CatDN/hello-pypi/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hello-pypi"]
